--- a/src/components/MovieDetails/MovieDetails.module.css
+++ b/src/components/MovieDetails/MovieDetails.module.css
@@ -1,3 +1,18 @@
 .div {
   margin-top: 100px;
+  display: flex;
+}
+
+.img {
+  height: 400px;
+  width: 300px;
+}
+
+.content {
+  padding-left: 20px;
+}
+
+.list {
+  list-style: none;
+  padding-left: 0;
 }
