--- a/src/components/MovieDetails/MovieDetails.module.css
+++ b/src/components/MovieDetails/MovieDetails.module.css
@@ -1,18 +1,33 @@
 .div {
-  margin-top: 100px;
   display: flex;
+  margin-bottom: 20px;
 }
 
 .img {
-  height: 400px;
-  width: 300px;
+  margin-top: 15px;
+  width: 200px;
+  height: auto;
+  margin-right: 20px;
+  border-radius: 8px;
 }
 
 .content {
-  padding-left: 20px;
+  flex: 1;
+}
+
+h2 {
+  margin-top: 0;
 }
 
 .list {
-  list-style: none;
-  padding-left: 0;
+  list-style-type: none;
+  padding: 0;
+}
+
+.list li {
+  margin-bottom: 5px;
+}
+
+.list li:last-child {
+  margin-bottom: 0;
 }
