--- a/src/components/MovieSearch/MovieSearch.module.css
+++ b/src/components/MovieSearch/MovieSearch.module.css
@@ -1,3 +1,43 @@
-.input {
+.form {
+  margin: 0 auto;
   margin-top: 100px;
+  display: flex;
+  flex-direction: column;
+  max-width: 1000px;
+  align-items: center;
+  gap: 40px;
+}
+
+.input {
+  width: 100%;
+  height: 25px;
+  border: 1px black solid;
+  border-radius: 8px;
+  padding: 5px;
+}
+
+.searchBtn {
+  background-image: linear-gradient(
+    to right,
+    #ba8b02 0%,
+    #181818 51%,
+    #ba8b02 100%
+  );
+  margin: 10px;
+  padding: 15px 45px;
+  text-align: center;
+  text-transform: uppercase;
+  transition: 0.5s;
+  background-size: 200% auto;
+  color: white;
+  box-shadow: 0 0 5px #eee;
+  border-radius: 10px;
+  display: block;
+  border: 1px white solid;
+}
+
+.searchBtn:hover {
+  background-position: right center;
+  color: #fff;
+  text-decoration: none;
 }
